Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19439

Nesting PathView and Flickable/Listview causes PathView to stop at wrong offset in some cases

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.0.0
    • 4.7.3
    • None
    • Ubuntu Linux with QtSDK from the qt.nokia.com, libraries version 4.7.3.
    • ec55d20563254f946135666412e2bdf8f8184e77 (qt/tqtc-qtdeclarative/5.12.0)

      When PathView and Flickable/ListView are nested, PathView stops at wrong offset in some cases. Please see the attached example code of the situation where the ListView is embedded in a PathView (the issue can also be reproduced the other way around - I've confirmed this with having a PathView inside a Flickable).

      Step to reproduce is this:

      1) Start to change the column in the example by dragging the view horizontally.
      2) Quickly release the mouse while the PathView is moving between columns, and start to scroll the ListView vertically.
      3) Release the mouse.

      Expected is that the PathView completes the movement - but instead, it is left between two columns (in this case, the example code prints a "*** BUG" text to the console). The visible ListViews can be still scrolled, but just clicking (not dragging) triggers finally the correct behavior: the PathView scrolls to the closest item.

        1. test.qml
          2 kB
          Jukka Alasalmi
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            jukalasa Jukka Alasalmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes