Nesting PathView and Flickable causes PathView to stop at wrong offset

Don't stop current animation until a drag is actually initiated.
Also ensure we handle a stolen grab sensibly.

Change-Id: I0ad493595fb85e1c9bace2d805184f911341fce2
Fixes: QTBUG-19439
Reviewed-on: http://codereview.qt.nokia.com/2420
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>